tests/snapshots/asm_snapshots__asm_u256_add_riscv@riscv64gc-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u256::Uint256 as core::ops::arith::Add>::add:
	ld a6, 0(a1)
	ld a7, 8(a1)
	ld t0, 16(a1)
	ld a1, 24(a1)
	ld a3, 24(a2)
	ld a4, 0(a2)
	ld a5, 8(a2)
	ld a2, 16(a2)
	add a1, a1, a3
	add a6, a6, a4
	add a7, a7, a5
	add t0, t0, a2
	sltu a3, a6, a4
	sltu a4, a7, a5
	sltu a2, t0, a2
	add a3, a3, a7
	sltu a5, a3, a7
	or a4, a4, a5
	add a4, a4, t0
	sltu a5, a4, t0
	or a2, a2, a5
	add a1, a1, a2
	sd a6, 0(a0)
	sd a3, 8(a0)
	sd a4, 16(a0)
	sd a1, 24(a0)
	ret
