tests/snapshots/asm_snapshots__asm_u256_mul@aarch64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::u256::Uint256 as core::ops::arith::Mul>::mul:
	ldp x9, x12, [x1]
	ldp x10, x11, [x0]
	ldp x0, x6, [x0, #16]
	ldp x2, x1, [x1, #16]
	umulh x14, x9, x10
	mul x6, x9, x6
	mul x16, x12, x10
	umulh x15, x12, x10
	mul x18, x9, x11
	umulh x4, x12, x11
	mul x5, x12, x11
	madd x12, x12, x0, x6
	umulh x17, x9, x11
	mul x13, x9, x10
	umulh x7, x9, x0
	mul x9, x9, x0
	mul x3, x2, x10
	madd x11, x2, x11, x12
	adds x12, x14, x16
	cinc x15, x15, hs
	adds x12, x12, x18
	umulh x14, x2, x10
	adcs x15, x15, x17
	stp x13, x12, [x8]
	madd x10, x1, x10, x11
	cset w11, hs
	adds x9, x5, x9
	adc x16, x4, x7
	adds x9, x9, x3
	adc x14, x16, x14
	adds x9, x9, x15
	adc x11, x14, x11
	add x10, x10, x11
	stp x9, x10, [x8, #16]
	ret
